# arcade-architecture

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  plan.yaml
.github/workflows/: cmake.yml  doc_build.yml  subtree_sync.yml
Src/: CMakeLists.txt
Src/CommonInterface/: CMakeLists.txt
Src/CommonInterface/Include/: IEntity.hpp
Src/Core/: AEntity.hpp  CMakeLists.txt  Core.cpp  Core.hpp  EntryPoint.cpp
include/: Color.hpp  Event.hpp  Grid.hpp  IColor.hpp  IDisplay.hpp  IEntity.hpp  IGame.hpp  IGraph.hpp
src/: CMakeLists.txt
src/commonInterface/: CMakeLists.txt
src/commonInterface/include/: ICore.hpp  IEntity.hpp
src/core/: AEntity.cpp  AEntity.hpp  CMakeLists.txt  LibFactory.cpp  LibFactory.hpp
